@@ -42,7 +42,10 @@
 <li>_plugin_parameters_ : モジュールのプラグインパラメータ</li>
 <li>_groupcontact_ : グループコンタクト情報。グループの作成時に設定されます。</li>
 <li>_groupother_ : グループに関するその他情報。グループの作成時に設定されます。</li>
+<li>_name_tag_ : モジュールに関連付けられたタグの名前。</li>
 <li>_email_tag_ : モジュールタグに関連付けられた Email。</li>
+<li>_phone_tag_ : モジュールタグに関連付けられた電話番号。</li>
+<li>_moduletags_ : モジュールタグに関連付けられた URL。</li>
 
 </ul>
 <p>
