@@ -1,4 +1,9 @@
 2014-06-05  Junichi Satoh  <junichi@rworks.jp>
+	
+	* include/help/ja/help_plugin_macros.php,
+	include/help/ja/help_alert_macros.php: Added new macros.
+
+2014-06-05  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/modules/manage_network_components_form_common.php: Removed
 	unnecesary variable.
